# Generated by Django 4.2.4 on 2023-10-20 01:39

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Carrera',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=255)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='Curso',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombreCurso', models.CharField(max_length=255)),
                ('nivel', models.IntegerField()),
                ('listaHorarios', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='EstadoCurso',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=255)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='Tipodocumento',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=255)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='Turno',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=255)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='Usuario',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre_completo', models.CharField(max_length=255)),
                ('domicilio', models.CharField(max_length=255)),
                ('mail', models.EmailField(max_length=254)),
                ('telefono', models.CharField(max_length=20)),
                ('documento', models.CharField(max_length=20)),
                ('fecha_nacimiento', models.DateField()),
                ('tipodocumento', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='UTN.tipodocumento')),
            ],
        ),
        migrations.CreateModel(
            name='Profesor',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('curso', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='UTN.curso')),
            ],
        ),
        migrations.CreateModel(
            name='NotaEvaluacion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=255)),
                ('tipoEvaluacion', models.CharField(max_length=255)),
                ('valor', models.IntegerField()),
                ('fecha', models.DateField()),
                ('profesor', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='UTN.profesor')),
            ],
        ),
        migrations.CreateModel(
            name='Materia',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=255)),
                ('siglas', models.CharField(max_length=10)),
                ('carrera', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='UTN.carrera')),
                ('materia_correlativa', models.OneToOneField(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='UTN.materia')),
            ],
        ),
        migrations.CreateModel(
            name='Inscripcion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fechaInicio', models.DateTimeField()),
                ('fechaFinal', models.DateTimeField()),
                ('carrera', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='UTN.carrera')),
                ('condicionFinal', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='UTN.estadocurso')),
                ('curso', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='UTN.curso')),
            ],
        ),
        migrations.CreateModel(
            name='Historial',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=255)),
                ('descripcion', models.TextField()),
                ('fecha_inicio', models.DateField()),
                ('fecha_final', models.DateField()),
                ('estado_curso', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='UTN.estadocurso')),
            ],
        ),
        migrations.AddField(
            model_name='curso',
            name='turno',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='UTN.turno'),
        ),
        migrations.CreateModel(
            name='Correlatividad',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('estado_curso', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='UTN.estadocurso')),
                ('materia', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='UTN.materia')),
            ],
        ),
        migrations.CreateModel(
            name='Alumno',
            fields=[
                ('usuario_ptr', models.OneToOneField(auto_created=True, on_delete=django.db.models.deletion.CASCADE, parent_link=True, primary_key=True, serialize=False, to='UTN.usuario')),
                ('listaCarrera', models.ManyToManyField(to='UTN.carrera')),
                ('listaInscripciones', models.ManyToManyField(to='UTN.inscripcion')),
            ],
            bases=('UTN.usuario',),
        ),
    ]
